Modify index.html styles.css

--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
       <div class="image-container">
         <div class="logo-container">
           <img src="images/odin-lined.png" alt="odin logo" class="logo" />
-          <span class="logo-title">ODIN</span>
+          <label class="logo-title">ODIN</label>
         </div>
-        <!-- <img
-          src="images/halie-west-25xggax4bSA-unsplash.jpg"
-          alt="green leaves" /> -->
         <p class="image-link">
           Photo by
           <a
@@ -35,7 +32,86 @@
           >
         </p>
       </div>
-      <div class="form-container"></div>
+      <div class="form-container">
+        <header class="sign-up-form-header">
+          <p>
+            This is not a real online service! You know you need something like
+            this in your life to help you realize your deepest dreams. Sign up
+            <em>now</em> to get started.
+          </p>
+          <p>You <em>know</em> you want to.</p>
+        </header>
+        <div class="title">Let's do this!</div>
+        <div class="content">
+          <form action="#" method="get">
+            <div class="user-details">
+              <div class="input-box">
+                <label for="first-name">FIRST NAME</label>
+                <input
+                  type="text"
+                  name="first-name"
+                  id="first-name"
+                  placeholder="Enter your first name"
+                  required />
+              </div>
+              <div class="input-box">
+                <label for="last-name">LAST NAME</label>
+                <input
+                  type="text"
+                  name="last-name"
+                  id="last-name"
+                  placeholder="Enter your last name"
+                  required />
+              </div>
+              <div class="input-box">
+                <label for="email">EMAIL</label>
+                <input
+                  type="email"
+                  name="email"
+                  id="email"
+                  placeholder="Enter your email"
+                  required />
+              </div>
+              <div class="input-box">
+                <label for="phone-number">PHONE NUMBER</label>
+                <input
+                  type="tel"
+                  name="phone-number"
+                  id="phone-number"
+                  placeholder="Enter your phone number"
+                  required />
+              </div>
+              <div class="input-box">
+                <label for="password">PASSWORD</label>
+                <input
+                  type="password"
+                  name="password"
+                  id="password"
+                  placeholder="Enter your password"
+                  required />
+              </div>
+              <div class="input-box">
+                <label for="confirm-password">CONFIRM PASSWORD</label>
+                <input
+                  type="password"
+                  name="confirm-password"
+                  id="confirm-password"
+                  placeholder="Confirm your password"
+                  required />
+              </div>
+              <div class="button">
+                <input type="submit" value="Create Account" />
+              </div>
+            </div>
+          </form>
+          <div class="sign-in-suggestion">
+            <p>
+              Already have an account?
+              <a class="sign-in-suggestion" href="#">Sign in</a>
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
