--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap"
       rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/63a987d3b1.js"
+      crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -110,6 +113,25 @@
               <a class="sign-in-suggestion" href="#">Sign in</a>
             </p>
           </div>
+        </div>
+        <div id="footer" class="container">
+          <footer>
+            <p>
+              Created by DiKeySnakes for
+              <a href="https://theodinproject.com/" target="_blank"
+                >The Odin Project</a
+              >
+              curriculum
+            </p>
+            <p>
+              Copyright &copy; DiKeySnakes 2022
+              <a
+                href="https://github.com/DiKeySnakes/sign-up-form-project"
+                target="_blank"
+                ><i id="icon" class="fa-brands fa-github"></i
+              ></a>
+            </p>
+          </footer>
         </div>
       </div>
     </div>
