Add compare passwords function. Modify index.html script.js

--- a/index.html
+++ b/index.html
@@ -129,14 +129,22 @@
                   type="checkbox"
                   name="showPassword"
                   onclick="changeTypeX()" />
-                <label for="showPassword">Show password</label>
+                <label
+                  for="showPassword"
+                  title="Password (UpperCase, LowerCase, Number/SpecialChar and min 8 Chars)"
+                  >Show password</label
+                >
               </div>
               <div class="input-checkbox">
                 <input
                   type="checkbox"
                   name="showConfirmPassword"
                   onclick="changeTypeY()" />
-                <label for="showConfirmPassword">Show password</label>
+                <label
+                  for="showConfirmPassword"
+                  title="Password (UpperCase, LowerCase, Number/SpecialChar and min 8 Chars)"
+                  >Show password</label
+                >
               </div>
               <div class="button">
                 <button type="submit">Create Account</button>
